module/eks.tf
resource "aws_eks_cluster" "eks" {

  count    = var.is-eks-cluster-enabled == true ? 1 : 0
  name     = var.cluster-name
  role_arn = aws_iam_role.eks-cluster-role[count.index].arn
  version  = var.cluster-version

  vpc_config {
    subnet_ids              = [aws_subnet.private-subnet[0].id, aws_subnet.private-subnet[1].id, aws_subnet.private-subnet[2].id]
    endpoint_private_access = var.endpoint-private-access
    endpoint_public_access  = var.endpoint-public-access
    security_group_ids      = [aws_security_group.eks-cluster-sg.id]
  }

  access_config {
    authentication_mode                         = "CONFIG_MAP"
    bootstrap_cluster_creator_admin_permissions = true
  }

  tags = {
    Name = var.cluster-name
    Env  = var.env
  }
}

# OIDC Provider
resource "aws_iam_openid_connect_provider" "eks-oidc" {
  client_id_list  = ["sts.amazonaws.com"]
  thumbprint_list = [data.tls_certificate.eks-certificate.certificates[0].sha1_fingerprint]
  url             = data.tls_certificate.eks-certificate.url
}


# AddOns for EKS Cluster
resource "aws_eks_addon" "eks-addons" {
  for_each      = { for idx, addon in var.addons : idx => addon }
  cluster_name  = aws_eks_cluster.eks[0].name
  addon_name    = each.value.name
  addon_version = each.value.version

  depends_on = [
    aws_eks_node_group.ondemand-node
  ]
}

# Launch Template
resource "aws_launch_template" "eks_launch_template" {
  name_prefix   = "${var.cluster-name}-launch-template"
  image_id      = var.ami_id
  instance_type = var.template_instance_types[0]

  block_device_mappings {
    device_name = "/dev/xvda"
    ebs {
      volume_size           = var.ebs_volume_size
      volume_type           = "gp3"
      delete_on_termination = true
      encrypted             = true
    }
  }

  lifecycle {
    create_before_destroy = true
  }

  user_data = base64encode(<<-EOF
MIME-Version: 1.0
Content-Type: multipart/mixed; boundary="==MYBOUNDARY=="
--==MYBOUNDARY==
Content-Type: text/x-shellscript; charset="us-ascii"
#!/bin/bash
/etc/eks/bootstrap.sh ${var.cluster-name}
--==MYBOUNDARY==--\
  EOF
  )

  monitoring {
    enabled = false
  }
  
  tag_specifications {
    resource_type = "instance"

    tags = {
      "Name"        = "poc-node-group"
      "Environment" = "poc"
    }
  }
}

# NodeGroups
resource "aws_eks_node_group" "ondemand-node" {
  cluster_name    = aws_eks_cluster.eks[0].name
  node_group_name = "${var.cluster-name}-on-demand-nodes"
  node_role_arn = aws_iam_role.eks-nodegroup-role[0].arn
  scaling_config {
    desired_size = var.desired_capacity_on_demand
    min_size     = var.min_capacity_on_demand
    max_size     = var.max_capacity_on_demand
  }

  launch_template {
    name    = aws_launch_template.eks_launch_template.name
    version = aws_launch_template.eks_launch_template.latest_version
  }

  subnet_ids = [aws_subnet.private-subnet[0].id, aws_subnet.private-subnet[1].id, aws_subnet.private-subnet[2].id]

  labels = {
    project = "EKS-NODE-GROUP-NAME"
  }

  tags = {
    "Name" = "${var.cluster-name}-nodes"
  }
  depends_on = [
    aws_iam_role_policy_attachment.eks-role-ng-AmazonEKSWorkerNodePolicy,
    aws_iam_role_policy_attachment.eks-role-ng-AmazonEKS_CNI_Policy,
    aws_iam_role_policy_attachment.eks-role-ng-AmazonEC2ContainerRegistryReadOnly,
  ]
}

# IAM NodeGroup
resource "aws_iam_role" "eks-role-ng" {
  name = "${var.cluster-name}-node-group"
  permissions_boundary = var.iam_permissions_boundary
  tags = {
    "Name" = "${var.cluster-name}-nodes"
  }
  assume_role_policy = jsonencode({
    Statement = [{
      Action = "sts:AssumeRole"
      Effect = "Allow"
      Principal = {
        Service = "ec2.amazonaws.com"
      }
    }]
    Version = "2012-10-17"
  })
}
 
resource "aws_iam_role_policy_attachment" "eks-role-ng-AmazonEKSWorkerNodePolicy" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy"
  role       = aws_iam_role.eks-role-ng.name
}
 
resource "aws_iam_role_policy_attachment" "eks-role-ng-AmazonEKS_CNI_Policy" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy"
  role       = aws_iam_role.eks-role-ng.name
}
 
resource "aws_iam_role_policy_attachment" "eks-role-ng-AmazonEC2ContainerRegistryReadOnly" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
  role       = aws_iam_role.eks-role-ng.name
}

# Bastion
resource "aws_instance" "bastion" {
  ami                    = var.bastion-ami
  instance_type          = var.bastion-instance-type
  key_name               = var.bastion-key-name
  subnet_id              = aws_subnet.public-subnet[0].id
  associate_public_ip_address = true

  tags = {
    Name = "${var.cluster-name}-bastion"
    Env  = var.env
  }

  iam_instance_profile = aws_iam_instance_profile.bastion_profile.name

  security_groups = [aws_security_group.bastion_sg.id]
}
